[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/EnemyManager.gd" type="Script" id=1]

[node name="EnemyManager" type="Node2D"]

script = ExtResource( 1 )
numEnemies = null
Enemy = null
waitTime = null
enemySpeed = null

[node name="LeftSpawn" type="Position2D" parent="." index="0"]

position = Vector2( 0, 360 )

[node name="RightSpawn" type="Position2D" parent="." index="1"]

position = Vector2( 1280, 360 )

[node name="SpawnTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="StartTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]


